# cuppa

./: Cargo.toml  README.md
src/: main.rs  paths.rs
src/controller/: add_custom_drink.rs  add_drink.rs  app.rs  drink_log.rs  error_screen.rs  home.rs  mod.rs  popover.rs  screen.rs  set_timestamp.rs  settings.rs  sync.rs  syncing.rs
src/entity/: mod.rs  setting.rs
src/repository/: connection.rs  drink.rs  drink_type.rs  duckdb.rs  mod.rs  setting.rs
src/sync/: background.rs  git.rs  log.rs  mod.rs  ops.rs
src/view/: home.rs
