[package]
name = "cuppa"
version = "0.1.0"
edition = "2024"

[dependencies]
duckdb = { version = "1.10504.0", features = ["chrono"] }
ratatui = "0.29"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "process", "time", "sync"] }
directories = "6.0.0"

[dev-dependencies]
tempfile = "3"
